fixed height spacing styling for lobby, dashboard

--- a/app/assets/stylesheets/contest/contest.css
+++ b/app/assets/stylesheets/contest/contest.css
@@ -65,3 +65,14 @@
   height: 50px;
   width: 200px;
 }
+/*
+.DateInput {
+  background: transparent !important;
+  width: 200px;
+}
+
+.SingleDatePickerInput {
+  background: transparent !important;
+  border: none !important;
+  width: 200px;
+}*/
