--- a/app/assets/stylesheets/dashboard/dashboard.scss
+++ b/app/assets/stylesheets/dashboard/dashboard.scss
@@ -54,18 +54,18 @@
 
 .dashboard-title {
   margin-left: 151  px;
-  padding-bottom: 25px;
-  padding-top: 30px;
+  padding-bottom: 2vh;
+  padding-top: 2vh;
   list-style-type: none;
   font-size: 24px;
 }
 
 .up-items {
-  max-height: 312px;
+  max-height: 31vh;
   overflow-y: auto;
 }
 
 .past-items {
-  max-height: 312px;
+  max-height: 31vh;
   overflow-y: auto;
 }
