--- a/app/assets/stylesheets/lobby/lobbylist.scss
+++ b/app/assets/stylesheets/lobby/lobbylist.scss
@@ -50,7 +50,7 @@ $testbluetwo: #094a68;
 }
 
 .table--fixed tbody {
-  max-height: 656px;
+  max-height: 65vh;
   // overflow: hidden;
   overflow-y: auto;
   width: 100%;
